--- a/less/media-dark.less
+++ b/less/media-dark.less
@@ -47,7 +47,12 @@
 		}
 	}
 
-	.leaflet-popup-content-wrapper, .map-legends, .map-tooltip, .popup {
+	.leaflet-popup-content-wrapper {
+		background: @dark-bg !important;
+		color: white;
+	}
+
+	body > .popup {
 		background: @dark-bg !important;
 		color: white;
 	}
